Alignment is not correct on "Advanced" button under "Insert Textbox" field in "Add a signer input fields" icon on document editor

--- a/assets/css/rtl-admin.css
+++ b/assets/css/rtl-admin.css
@@ -1066,3 +1066,9 @@ span.deleteIcon{
     text-align: right;
     float: right;
 }
+.sif_advanced_button_area {
+    margin-left: -35px;
+}
+.sif_popup_main_todaydate {
+    text-align: right;
+}
